--- a/gpySdk.html
+++ b/gpySdk.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <!-- saved from url=(0052)http://wbody66.e1.luyouxia.net:22588/home/index.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link href="./Capture images and video stream from webcams in browsers _ Webcam SDK_files/dynamsoft.webtwain.css" rel="stylesheet"><script src="./Capture images and video stream from webcams in browsers _ Webcam SDK_files/dynamsoft.webtwain.install.js" async="" charset="utf-8"></script>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link href="dynamsoft.webtwain.css" rel="stylesheet"><script src="dynamsoft.webtwain.install.js" async="" charset="utf-8"></script>
 <title>Capture images and video stream from webcams in browsers | Webcam SDK</title>
 
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="X-UA-Compatible" content="requiresActiveX=true">
 <meta name="viewport" content="width=device-width, maximum-scale=1.0">
-<link href="./Capture images and video stream from webcams in browsers _ Webcam SDK_files/style.css" type="text/css" rel="stylesheet">
-<link href="./Capture images and video stream from webcams in browsers _ Webcam SDK_files/dcs_style.css" type="text/css" rel="stylesheet">
-<script src="./Capture images and video stream from webcams in browsers _ Webcam SDK_files/jquery.js"></script> 
-<script src="./Capture images and video stream from webcams in browsers _ Webcam SDK_files/common.js"></script>
+<link href="style.css" type="text/css" rel="stylesheet">
+<link href="dcs_style.css" type="text/css" rel="stylesheet">
+<script src="jquery.js"></script> 
+<script src="common.js"></script>
 </head>
 <body>
 <style>
@@ -25,16 +25,16 @@
                 <div id="DWTcontainerTop">
                     <div id="divEdit">
                         <ul class="operateGrp">
-                            <li><img src="./Capture images and video stream from webcams in browsers _ Webcam SDK_files/ShowEditor.png" title="Show Image Editor" alt="Show Image Editor" id="btnEditor" onclick="btnShowImageEditor_onclick()"> </li>
-                            <li><img src="./Capture images and video stream from webcams in browsers _ Webcam SDK_files/RotateLeft.png" title="Rotate Left" alt="Rotate Left" id="btnRotateL" onclick="btnRotateLeft_onclick()"> </li>
-                            <li><img src="./Capture images and video stream from webcams in browsers _ Webcam SDK_files/RotateRight.png" title="Rotate Right" alt="Rotate Right" id="btnRotateR" onclick="btnRotateRight_onclick()"> </li>
-                            <li><img src="./Capture images and video stream from webcams in browsers _ Webcam SDK_files/Rotate180.png" alt="Rotate 180" title="Rotate 180" onclick="btnRotate180_onclick()"> </li>
-                            <li><img src="./Capture images and video stream from webcams in browsers _ Webcam SDK_files/Mirror.png" title="Mirror" alt="Mirror" id="btnMirror" onclick="btnMirror_onclick()"> </li>
-                            <li><img src="./Capture images and video stream from webcams in browsers _ Webcam SDK_files/Flip.png" title="Flip" alt="Flip" id="btnFlip" onclick="btnFlip_onclick()"> </li>
-                            <li><img src="./Capture images and video stream from webcams in browsers _ Webcam SDK_files/RemoveSelectedImages.png" title="Remove Selected Images" alt="Remove Selected Images" id="DW_btnRemoveCurrentImage" onclick="btnRemoveCurrentImage_onclick();"></li>
-                            <li><img src="./Capture images and video stream from webcams in browsers _ Webcam SDK_files/RemoveAllImages.png" title="Remove All Images" alt="Remove All Images" id="DW_btnRemoveAllImages" onclick="btnRemoveAllImages_onclick();"></li>
-                            <li><img src="./Capture images and video stream from webcams in browsers _ Webcam SDK_files/ChangeSize.png" title="Change Image Size" alt="Change Image Size" id="btnChangeImageSize" onclick="btnChangeImageSize_onclick();"> </li>
-                            <li> <img src="./Capture images and video stream from webcams in browsers _ Webcam SDK_files/Crop.png" title="Crop" alt="Crop" id="btnCrop" onclick="btnCrop_onclick();"></li>
+                            <li><img src="ShowEditor.png" title="Show Image Editor" alt="Show Image Editor" id="btnEditor" onclick="btnShowImageEditor_onclick()"> </li>
+                            <li><img src="RotateLeft.png" title="Rotate Left" alt="Rotate Left" id="btnRotateL" onclick="btnRotateLeft_onclick()"> </li>
+                            <li><img src="RotateRight.png" title="Rotate Right" alt="Rotate Right" id="btnRotateR" onclick="btnRotateRight_onclick()"> </li>
+                            <li><img src="Rotate180.png" alt="Rotate 180" title="Rotate 180" onclick="btnRotate180_onclick()"> </li>
+                            <li><img src="Mirror.png" title="Mirror" alt="Mirror" id="btnMirror" onclick="btnMirror_onclick()"> </li>
+                            <li><img src="Flip.png" title="Flip" alt="Flip" id="btnFlip" onclick="btnFlip_onclick()"> </li>
+                            <li><img src="RemoveSelectedImages.png" title="Remove Selected Images" alt="Remove Selected Images" id="DW_btnRemoveCurrentImage" onclick="btnRemoveCurrentImage_onclick();"></li>
+                            <li><img src="RemoveAllImages.png" title="Remove All Images" alt="Remove All Images" id="DW_btnRemoveAllImages" onclick="btnRemoveAllImages_onclick();"></li>
+                            <li><img src="ChangeSize.png" title="Change Image Size" alt="Change Image Size" id="btnChangeImageSize" onclick="btnChangeImageSize_onclick();"> </li>
+                            <li> <img src="Crop.png" title="Crop" alt="Crop" id="btnCrop" onclick="btnCrop_onclick();"></li>
                         </ul>
                         <div id="ImgSizeEditor" style="visibility:hidden">
                             <ul>
@@ -76,7 +76,7 @@
                                         <select size="1" id="webcamsource" style="position:relative" onchange="webcam_source_onchange()">
                                         </select>
                                     </div>
-                                    <div id="tblLoadImage" style="visibility:hidden;"> <a href="javascript: void(0)" class="ClosetblLoadImage"><img src="./Capture images and video stream from webcams in browsers _ Webcam SDK_files/icon-ClosetblLoadImage.png" alt="Close tblLoadImage"></a>
+                                    <div id="tblLoadImage" style="visibility:hidden;"> <a href="javascript: void(0)" class="ClosetblLoadImage"><img src="icon-ClosetblLoadImage.png" alt="Close tblLoadImage"></a>
 
                                     </div>
                                     <ul id="ulScaneImageHIDE">
@@ -145,21 +145,21 @@
         </div>
     </div>
 
-<div id="loaderContent" class="invisible"> <img id="imgLoader" src="./Capture images and video stream from webcams in browsers _ Webcam SDK_files/loader.gif"> <span id="spLoader">Initiating...</span> </div>
+<div id="loaderContent" class="invisible"> <img id="imgLoader" src="loader.gif"> <span id="spLoader">Initiating...</span> </div>
 <div id="loadingLayer" class="invisible"></div>
 <script>
     window['bDCSOnlineDemo'] = true;
 </script>
-<script src="./Capture images and video stream from webcams in browsers _ Webcam SDK_files/dynamsoft.webtwain.config.js"></script>
+<script src="dynamsoft.webtwain.config.js"></script>
 <script>
 	if(!isPageIsAllowed)
 		Dynamsoft.WebTwainEnv.AutoLoad = false;
 </script>
-<script src="./Capture images and video stream from webcams in browsers _ Webcam SDK_files/dynamsoft.webtwain.initiate.js"></script> 
-<script src="./Capture images and video stream from webcams in browsers _ Webcam SDK_files/dynamsoft.webtwain.addon.webcam.js"></script> 
-<script src="./Capture images and video stream from webcams in browsers _ Webcam SDK_files/online_demo_operation.js"></script> 
-<script src="./Capture images and video stream from webcams in browsers _ Webcam SDK_files/online_demo_initpage.js"></script> 
-<script src="./Capture images and video stream from webcams in browsers _ Webcam SDK_files/dcs_script.js"></script> 
+<script src="dynamsoft.webtwain.initiate.js"></script> 
+<script src="dynamsoft.webtwain.addon.webcam.js"></script> 
+<script src="online_demo_operation.js"></script> 
+<script src="online_demo_initpage.js"></script> 
+<script src="dcs_script.js"></script> 
 <script>
     $("ul.PCollapse li>div").click(function() {
         if ($(this).next().css("display") == "none") {
