删除部分元素

--- a/gpySdk.html
+++ b/gpySdk.html
@@ -24,7 +24,7 @@
         <div id="ScanWebcamDemo">
                 <div id="DWTcontainerTop">
                     <div id="divEdit">
-                        <ul class="operateGrp">
+<!--                         <ul class="operateGrp">
                             <li><img src="ShowEditor.png" title="Show Image Editor" alt="Show Image Editor" id="btnEditor" onclick="btnShowImageEditor_onclick()"> </li>
                             <li><img src="RotateLeft.png" title="Rotate Left" alt="Rotate Left" id="btnRotateL" onclick="btnRotateLeft_onclick()"> </li>
                             <li><img src="RotateRight.png" title="Rotate Right" alt="Rotate Right" id="btnRotateR" onclick="btnRotateRight_onclick()"> </li>
@@ -35,7 +35,7 @@
                             <li><img src="RemoveAllImages.png" title="Remove All Images" alt="Remove All Images" id="DW_btnRemoveAllImages" onclick="btnRemoveAllImages_onclick();"></li>
                             <li><img src="ChangeSize.png" title="Change Image Size" alt="Change Image Size" id="btnChangeImageSize" onclick="btnChangeImageSize_onclick();"> </li>
                             <li> <img src="Crop.png" title="Crop" alt="Crop" id="btnCrop" onclick="btnCrop_onclick();"></li>
-                        </ul>
+                        </ul> -->
                         <div id="ImgSizeEditor" style="visibility:hidden">
                             <ul>
                                 <li>
@@ -62,7 +62,7 @@
                     </div>
                     <div id="dwtcontrolContainer"></div>
                     <div id="DWTNonInstallContainerID"></div>
-                    <div id="btnGroupBtm" class="clearfix"><div class="ct-lt">Page: <input id="DW_btnFirstImage" onclick="btnFirstImage_onclick()" type="button" value=" |&lt; ">&nbsp;<input id="DW_btnPreImage" onclick="btnPreImage_onclick()" type="button" value=" &lt; ">&nbsp;&nbsp;<input type="text" size="2" id="DW_CurrentImage" readonly="readonly"> / <input type="text" size="2" id="DW_TotalImage" readonly="readonly">&nbsp;&nbsp;<input id="DW_btnNextImage" onclick="btnNextImage_onclick()" type="button" value=" &gt; ">&nbsp;<input id="DW_btnLastImage" onclick="btnLastImage_onclick()" type="button" value=" &gt;| "></div><div class="ct-rt">Preview Mode: <select size="1" id="DW_PreviewMode" onchange="setlPreviewMode();">    <option value="0">1X1</option><option value="1">2X2</option><option value="2">3X3</option><option value="3">4X4</option><option value="4">5X5</option></select><br></div></div>
+<!--                     <div id="btnGroupBtm" class="clearfix"><div class="ct-lt">Page: <input id="DW_btnFirstImage" onclick="btnFirstImage_onclick()" type="button" value=" |&lt; ">&nbsp;<input id="DW_btnPreImage" onclick="btnPreImage_onclick()" type="button" value=" &lt; ">&nbsp;&nbsp;<input type="text" size="2" id="DW_CurrentImage" readonly="readonly"> / <input type="text" size="2" id="DW_TotalImage" readonly="readonly">&nbsp;&nbsp;<input id="DW_btnNextImage" onclick="btnNextImage_onclick()" type="button" value=" &gt; ">&nbsp;<input id="DW_btnLastImage" onclick="btnLastImage_onclick()" type="button" value=" &gt;| "></div><div class="ct-rt">Preview Mode: <select size="1" id="DW_PreviewMode" onchange="setlPreviewMode();">    <option value="0">1X1</option><option value="1">2X2</option><option value="2">3X3</option><option value="3">4X4</option><option value="4">5X5</option></select><br></div></div> -->
                 </div>
                 <div id="ScanWrapper">
                     <div id="divScanner" class="divinput">
@@ -90,7 +90,7 @@
                                         <li>
                                             <div class="D_dcsButtons" style="display:none">
                                                 <input id="btn-grab" class="d-btn bgBlue" type="button" value="Grab">
-                                                <input id="btn-switch" class="d-btn bgBlue ml10" type="button" value="Switch to Image Viewer">
+<!--                                                 <input id="btn-switch" class="d-btn bgBlue ml10" type="button" value="Switch to Image Viewer"> -->
                                             </div>
                                         </li>
                                     </ul>
