注释掉部分2

--- a/gpySdk.html
+++ b/gpySdk.html
@@ -76,9 +76,9 @@
                                         <select size="1" id="webcamsource" style="position:relative" onchange="webcam_source_onchange()">
                                         </select>
                                     </div>
-                                    <div id="tblLoadImage" style="visibility:hidden;"> <a href="javascript: void(0)" class="ClosetblLoadImage"><img src="icon-ClosetblLoadImage.png" alt="Close tblLoadImage"></a>
+<!--                                     <div id="tblLoadImage" style="visibility:hidden;"> <a href="javascript: void(0)" class="ClosetblLoadImage"><img src="icon-ClosetblLoadImage.png" alt="Close tblLoadImage"></a>
 
-                                    </div>
+                                    </div> -->
                                     <ul id="ulScaneImageHIDE">
                                         <li id="divProductDetail"><ul id="divTwainType"> <li><label id="lblShowUI" for="ShowUI"><input type="checkbox" id="ShowUI">Show UI&nbsp;</label><label for="ADF"><input type="checkbox" id="ADF">AutoFeeder&nbsp;</label><label for="Duplex"><input type="checkbox" id="Duplex">Duplex</label></li><li>Pixel Type:<label for="BW" style="margin-left:5px;"><input type="radio" id="BW" name="PixelType">B&amp;W </label><label for="Gray"><input type="radio" id="Gray" name="PixelType">Gray</label><label for="RGB"><input type="radio" id="RGB" name="PixelType">Color</label></li><li><span>Resolution:</span><select size="1" id="Resolution"><option value="100">100</option><option value="150">150</option><option value="200">200</option><option value="300">300</option></select></li></ul></li>
                                         <li id="divWebcamDetail"></li>
