--- a/gpySdk.html
+++ b/gpySdk.html
@@ -80,13 +80,13 @@
 
                                     </div> -->
                                     <ul id="ulScaneImageHIDE">
-                                        <li id="divProductDetail"><ul id="divTwainType"> <li><label id="lblShowUI" for="ShowUI"><input type="checkbox" id="ShowUI">Show UI&nbsp;</label><label for="ADF"><input type="checkbox" id="ADF">AutoFeeder&nbsp;</label><label for="Duplex"><input type="checkbox" id="Duplex">Duplex</label></li><li>Pixel Type:<label for="BW" style="margin-left:5px;"><input type="radio" id="BW" name="PixelType">B&amp;W </label><label for="Gray"><input type="radio" id="Gray" name="PixelType">Gray</label><label for="RGB"><input type="radio" id="RGB" name="PixelType">Color</label></li><li><span>Resolution:</span><select size="1" id="Resolution"><option value="100">100</option><option value="150">150</option><option value="200">200</option><option value="300">300</option></select></li></ul></li>
+<!--                                         <li id="divProductDetail"><ul id="divTwainType"> <li><label id="lblShowUI" for="ShowUI"><input type="checkbox" id="ShowUI">Show UI&nbsp;</label><label for="ADF"><input type="checkbox" id="ADF">AutoFeeder&nbsp;</label><label for="Duplex"><input type="checkbox" id="Duplex">Duplex</label></li><li>Pixel Type:<label for="BW" style="margin-left:5px;"><input type="radio" id="BW" name="PixelType">B&amp;W </label><label for="Gray"><input type="radio" id="Gray" name="PixelType">Gray</label><label for="RGB"><input type="radio" id="RGB" name="PixelType">Color</label></li><li><span>Resolution:</span><select size="1" id="Resolution"><option value="100">100</option><option value="150">150</option><option value="200">200</option><option value="300">300</option></select></li></ul></li>
                                         <li id="divWebcamDetail"></li>
                                         <li class="tc">
                                             <div class="D_dwtButtons">
                                                 <input id="btnScan" disabled="disabled" type="button" value="Scan" onclick="acquireImage();">
                                             </div>
-                                        </li>
+                                        </li> -->
                                         <li>
                                             <div class="D_dcsButtons" style="display:none">
                                                 <input id="btn-grab" class="d-btn bgBlue" type="button" value="Grab">
