注释部分功能

--- a/gpySdk.html
+++ b/gpySdk.html
@@ -106,13 +106,13 @@
                                 <input type="text" size="20" id="txt_fileName">
                             </li>
                             <li style="padding-right:0;">
-                                <label for="imgTypebmp">
+<!--                                 <label for="imgTypebmp">
                                     <input type="radio" value="bmp" name="ImageType" id="imgTypebmp" onclick="rd_onclick();">
-                                    BMP</label>
+                                    BMP</label> -->
                                 <label for="imgTypejpeg">
                                     <input type="radio" value="jpg" name="ImageType" id="imgTypejpeg" onclick="rd_onclick();">
                                     JPEG</label>
-                                <label for="imgTypetiff">
+<!--                                 <label for="imgTypetiff">
                                     <input type="radio" value="tif" name="ImageType" id="imgTypetiff" onclick="rdTIFF_onclick();">
                                     TIFF</label>
                                 <label for="imgTypepng">
@@ -120,19 +120,19 @@
                                     PNG</label>
                                 <label for="imgTypepdf">
                                     <input type="radio" value="pdf" name="ImageType" id="imgTypepdf" onclick="rdPDF_onclick();">
-                                    PDF</label>
+                                    PDF</label> -->
                             </li>
-                            <li>
+<!--                             <li>
                                 <label for="MultiPageTIFF">
                                     <input type="checkbox" id="MultiPageTIFF">
                                     Multi-Page TIFF</label>
                                 <label for="MultiPagePDF">
                                     <input type="checkbox" id="MultiPagePDF">
                                     Multi-Page PDF </label>
-                            </li>
+                            </li> -->
                             <li>
                                 <input id="btnSave" class="d-btn bgBlue" type="button" value="Save to Local" onclick="saveUploadImage(&#39;local&#39;)">
-                                <input id="btnUpload" class="d-btn bgBlue" type="button" value="Upload to Server" onclick="saveUploadImage(&#39;server&#39;)">
+<!--                                 <input id="btnUpload" class="d-btn bgBlue" type="button" value="Upload to Server" onclick="saveUploadImage(&#39;server&#39;)"> -->
                             </li>
                         </ul>
                     </div>
